feat: new module

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corinthians - Paixão e Loucura</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="build/main.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -25,22 +27,32 @@
             <div class="conteiner-primary">
                 <section id="notice">
                     <h2>Noticias</h2>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Gil_Corinthians_IMG_3058.jpg" alt="Jogados Gil">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod, quaerat, quasi, quidem, quibusdam, quod, quaerat, quasi.</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Gil_Corinthians_IMG_3058.jpg"
+                        alt="Jogados Gil">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod, quaerat, quasi, quidem,
+                        quibusdam, quod, quaerat, quasi.</p>
                     <a href="">Leia mais</a>
                 </section>
                 <section id="about">
                     <h2>O Campeão dos Campeões</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod, quaerat, quasi, quidem, quibusdam, quod, quaerat, quasi. <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis impedit, dicta minus, praesentium distinctio aliquam reprehenderit quam amet quidem, in pariatur! Voluptates excepturi sint animi tenetur, perferendis voluptatum debitis nemo? <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod, quaerat, quasi, quidem,
+                        quibusdam, quod, quaerat, quasi. <br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis impedit, dicta minus, praesentium
+                        distinctio aliquam reprehenderit quam amet quidem, in pariatur! Voluptates excepturi sint animi
+                        tenetur, perferendis voluptatum debitis nemo? <br>
                     </p>
                     <div class="trofeus">
-                        <img title="Titulo da Libertadores" src="https://www.otempo.com.br/image/contentid/policy:1.2693525:1656939154/WhatsApp-Image-2022-07-04-at-09-52-11-1-jpeg.jpeg?f=3x2&w=1224" alt="Titulo da Libertadores">
-                        <img src="https://cdn.meutimao.com.br/_upload/historia/titulos-conquistados/campeonato_brasileiro_2017.jpg" alt="Titulo campeonato brasileiro 2017">
-                        <img src="https://jpimg.com.br/uploads/2017/04/I_20090702_013338.jpg" alt="Titulo copa do Brail">
-                        <img src="https://img.r7.com/images/corinthians-20032019155458861?dimensions=660x360" alt="Titulo Mundial de clubes">
+                        <img title="Titulo da Libertadores"
+                            src="https://www.otempo.com.br/image/contentid/policy:1.2693525:1656939154/WhatsApp-Image-2022-07-04-at-09-52-11-1-jpeg.jpeg?f=3x2&w=1224"
+                            alt="Titulo da Libertadores">
+                        <img src="https://cdn.meutimao.com.br/_upload/historia/titulos-conquistados/campeonato_brasileiro_2017.jpg"
+                            alt="Titulo campeonato brasileiro 2017">
+                        <img src="https://jpimg.com.br/uploads/2017/04/I_20090702_013338.jpg"
+                            alt="Titulo copa do Brail">
+                        <img src="https://img.r7.com/images/corinthians-20032019155458861?dimensions=660x360"
+                            alt="Titulo Mundial de clubes">
                     </div>
-                </section>            
+                </section>
             </div>
             <div class="conteiner-secondary">
                 <section id="contact">
@@ -65,7 +77,7 @@
                 </section>
                 <section id="networks">
                     <h2>Redes Sociais</h2>
-                    <div class="redes"> 
+                    <div class="redes">
                         <img src="./img/facebook.png" alt="facebook">
                         <img src="./img/instagram.png" alt="instagram">
                         <img src="./img/youtube.png" alt="youtube">
@@ -74,7 +86,7 @@
                 <section id="address">
                     <h2>Venha até nós</h2>
                     <p>
-                        <address>Rua exemplo<br>Nº 500<br>Itaquera/SP<br>CEP: 00000-001</address>
+                    <address>Rua exemplo<br>Nº 500<br>Itaquera/SP<br>CEP: 00000-001</address>
                     </p>
                 </section>
             </div>
@@ -85,4 +97,5 @@
         <p>&copy; Todos os direitos reservados | Gabriel Tenório de Oliveira</p>
     </footer>
 </body>
+
 </html>
